# EL2008-PMC-Tubes

./: .gitignore  CMakeLists.txt  README.md  gpt.c
data/: DataPMC20232024.xlsx  Riwayat.csv
include/: buff_printer.h  files.h  gui.h  pasienTab.h  pasien_tab.h  pendapatan_tab.h  riwayat_tab.h  types.h
res/: klinikx.gresource.xml  klinikx.ui  pasien.ui  pasien_entry.ui  pasien_form.ui  pasien_id.ui  pasien_info.ui  pasien_search.ui  riwayat_entry.ui  riwayat_form.ui  riwayat_search.ui
src/: buff_printer.c  files.c  gui.c  main.c  pasienTab.c  pasien_tab.c  pendapatan_tab.c  riwayat_tab.c  types.c
